--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" crossorigin="anonymous" />
-    <title>Boring</title>
+    <title>Ogłoszenie</title>
 </head>
 <body>
 <div class="card" style="width: 18rem;">
     <div class="card-body">
+        <a th:href="@{/}" class="btn btn-primary">Wróć do listy ogłoszeń</a>
         <h5 class="card-title" th:text="${ad.id}"></h5>
+        <h6 class="card-subtitle mb-2 text-muted">
+            <span th:text="${ad.details.name}">Name</span>
+            <span th:text="${ad.details.surname}">Surname</span>
+        </h6>
         <p class="card-text">Szczegóły ogłoszenia</p>
-        <a th:href="@{/}" class="btn btn-primary">Go home</a>
     </div>
 </div>
 <script th:src="@{/js/jquery-3.5.0.slim.min.js}" crossorigin="anonymous"></script>
