--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -7,6 +7,10 @@
     <title>Ogłoszenie</title>
 </head>
 <body>
+<nav class="navbar navbar-dark bg-success">
+    <a class="navbar-brand">Terapia</a>
+    <a th:href="@{/logout}" class="btn btn-success btn-outline-light text-light bg-success">Wyloguj</a>
+</nav>
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <a th:href="@{/}" class="btn btn-primary">Wróć do listy ogłoszeń</a>
@@ -18,7 +22,7 @@
         <p class="card-text">Szczegóły ogłoszenia</p>
     </div>
 </div>
-<script th:src="@{/js/jquery-3.5.0.slim.min.js}" crossorigin="anonymous"></script>
+<script th:src="@{/js/jquery-3.5.1.slim.min.js}" crossorigin="anonymous"></script>
 <script th:src="@{/js/bootstrap.bundle.min.js}" crossorigin="anonymous"></script>
 </body>
 </html>
