--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -37,6 +37,15 @@
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
+                    <span class="input-group-text">Zdjęcie</span>
+                </div>
+                <input id="photo" type="file" class="input-group-text" style="flex-grow:1; text-align:left">
+                <div class="input-group-append">
+                    <button class="btn btn-secondary" type="button">Prześlij</button>
+                </div>
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
                     <span class="input-group-text">Telefon</span>
                 </div>
                 <input type="text" class="form-control" placeholder="Numer Twojego telefonu" aria-label="Numer telefonu">
@@ -53,6 +62,34 @@
                 </div>
                 <input type="text" class="form-control" placeholder="Jeśli pracujesz w ośrodku terapeutycznym, podaj jego nazwę" aria-label="Ośrodek terapeutyczny">
             </div>
+            <div class="input-group">
+                <span class="input-group-text w-100 justify-content-center ">Cennik</span>
+            </div>
+            <div id="pricing">
+                <div class="row pricingRow">
+                    <div class="input-group col pr-0" style="flex-grow: 7">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Usługa</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Usługa, np. pierwsza wizyta, sesja dla par" aria-label="Usługa">
+                    </div>
+                    <div class="input-group col pl-0 pr-0" style="flex-grow: 6">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Cena</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Cena" aria-label="Cena">
+                        <div class="input-group-append">
+                            <span class="input-group-text">zł</span>
+                        </div>
+                    </div>
+                    <div class="input-group col pl-0">
+                        <button id="removePrice" type="button" class="btn btn-danger input-group-text removeBtn">Usuń</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <button id="addNextPrice" type="button" class="btn btn-secondary ml-auto mr-3 mb-3">Dodaj kolejną pozycję</button>
+            </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text">Opis terapii</span>
@@ -63,7 +100,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">Nurt psychoterapeutyczny</span>
                 </div>
-                <input type="text" class="form-control" placeholder="Nurt w jaim prowadzisz psychoterapię, np. psychodynamiczny, behawioralny" aria-label="Nurt psychoterapeutyczny">
+                <input type="text" class="form-control" placeholder="Nurt w jakim prowadzisz psychoterapię, np. psychodynamiczny, behawioralny" aria-label="Nurt psychoterapeutyczny">
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
@@ -94,6 +131,14 @@
     </div>
 </div>
 <script th:src="@{/js/jquery-3.5.1.slim.min.js}" crossorigin="anonymous"></script>
+<script>
+    $( "#addNextPrice" ).click(function() {
+        $('#pricing').append('<div class="row pricingRow"><div class="input-group col pr-0" style="flex-grow: 7"><div class="input-group-prepend"><span class="input-group-text">Usługa</span></div> <input type="text" class="form-control" placeholder="Usługa, np. pierwsza wizyta, sesja dla par" aria-label="Usługa"> </div> <div class="input-group col pl-0 pr-0" style="flex-grow: 6"> <div class="input-group-prepend"> <span class="input-group-text">Cena</span> </div> <input type="text" class="form-control" placeholder="Cena" aria-label="Cena"> <div class="input-group-append"> <span class="input-group-text">zł</span> </div> </div> <div class="input-group col pl-0"> <button type="button" class="btn btn-danger input-group-text removeBtn">Usuń</button> </div> </div>');
+    });
+    $("body").on("click", ".removeBtn", function() {
+        $(this).parents('.pricingRow').remove();
+    });
+</script>
 <script th:src="@{/js/bootstrap.bundle.min.js}" crossorigin="anonymous"></script>
 </body>
 </html>
