--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,19 +10,11 @@
 <nav class="navbar navbar-dark bg-success">
     <a class="navbar-brand">Terapia</a>
     <a th:href="@{/create}" class="btn btn-warning btn-outline-light bg-warning text-light ml-auto">Dodaj ogłoszenie</a>
-    <a th:href="@{/logout}" class="btn btn-success btn-outline-light bg-success text-light ml-3">Wyloguj</a>
+    <a th:unless="${therapist == null}" th:href="@{/logout}" class="btn btn-success btn-outline-light bg-success text-light ml-3">Wyloguj</a>
+    <a th:if="${therapist == null}" th:href="@{/login}" class="btn btn-success btn-outline-light bg-success text-light ml-3">Zaloguj</a>
 </nav>
-<div id="sampleCard" class="card collapse show" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a th:href="@{/boring}" class="card-link">Boring link</a>
-        <a th:href="@{/}" class="card-link">Home link</a>
-    </div>
-</div>
-<div th:each="ad, iter: ${ads}">
-    <div class="card w-50 ml-3">
+<div class="mt-3 ml-3">
+    <div class="card w-50" th:each="ad, iter: ${ads}">
         <div class="card-body">
         <h5 class="card-title">
             <span th:text="${ad.details.name}">Name</span>
@@ -43,12 +35,17 @@
                 <div class="d-flex align-items-center">
                     <div th:text="${cookies_text}">Cookies text</div>
                 </div>
-                <button class="btn btn-success ml-4" type="button" data-toggle="collapse" data-target="#cookies">Rozumiem</button>
+                <button id="acceptCookies" class="btn btn-success ml-4" data-toggle="collapse" data-target="#cookies">Rozumiem</button>
             </div>
         </div>
     </div>
 </div>
-<script th:src="@{/js/jquery-3.5.1.slim.min.js}" crossorigin="anonymous"></script>
+<script th:src="@{/js/jquery-3.5.1.min.js}" crossorigin="anonymous"></script>
+<script>
+    /*$('#acceptCookies').click(function () {
+        $('#cookies').removeClass("show");
+    });*/
+</script>
 <script th:src="@{/js/bootstrap.bundle.min.js}" crossorigin="anonymous"></script>
 </body>
 </html>
