--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -9,16 +9,58 @@
 <body>
 <nav class="navbar navbar-dark bg-success">
     <a class="navbar-brand">Terapia</a>
-    <a th:href="@{/logout}" class="btn btn-success btn-outline-light text-light bg-success">Wyloguj</a>
+    <a th:href="@{/create}" class="btn btn-success btn-outline-light ml-auto">Dodaj ogłoszenie</a>
+    <a th:unless="${therapist == null}" th:href="@{/logout}" class="btn btn-success btn-outline-dark ml-3">Wyloguj</a>
+    <a th:if="${therapist == null}" th:href="@{/login}" class="btn btn-success btn-outline-dark ml-3">Zaloguj</a>
 </nav>
-<div class="card w-50 mt-3 mx-auto">
+<div class="card w-50 mt-3 mb-5 mx-auto">
+    <div class="card-header">
+        <ul class="nav nav-pills card-header-pills">
+            <li class="nav-item">
+                <a th:href="@{/}" class="btn btn-success">Wróć do listy ogłoszeń</a>
+            </li>
+            <li th:if="${moderator != null || (therapist != null && therapist.ad == ad.id)}"
+                class="nav-item ml-auto">
+                <form th:action="@{/remove/{id}(id=${ad.id})}" method="post">
+                    <button type="submit" class="btn btn-secondary ml-auto">Usuń</button>
+                </form>
+            </li>
+        </ul>
+    </div>
     <div class="card-body">
-        <a th:href="@{/}" class="btn btn-success">Wróć do listy ogłoszeń</a>
-        <h5 class="card-title" th:text="${ad.details.name + ' ' + ad.details.surname}">Name and surname</h5>
-        <h6 class="card-subtitle mb-2 text-muted">
+        <h3 class="card-title" th:text="${ad.details.name + ' ' + ad.details.surname}">Name and surname</h3>
+        <h5 class="card-subtitle mb-4 text-muted">
             <span th:text="${ad.details.address}">Address</span>
-        </h6>
-        <p class="card-text">Szczegóły ogłoszenia</p>
+        </h5>
+        <div th:if="${ad.details.telephoneNumber != null}" class="d-flex mx-auto mb-3 py-1">
+            <div class="rounded-left text-light bg-success px-4 py-3">
+                Telefon
+            </div>
+            <div class="rounded-right bg-light border-secondary flex-grow-1 px-4 py-3"
+                 th:text="${ad.details.telephoneNumber}">
+                Numer telefonu
+            </div>
+        </div>
+        <div th:if="${ad.details.email != null}" class="d-flex mx-auto mb-3 py-1">
+            <div class="rounded-left text-light bg-success px-4 py-3">
+                Email
+            </div>
+            <div class="rounded-right bg-light border-secondary flex-grow-1 px-4 py-3"
+                 th:text="${ad.details.email}">
+                Adres email
+            </div>
+        </div>
+        <div class="mx-auto w-100 rounded-top text-light bg-success px-4 py-3">
+            Sczegółowe informacje o psychoterapii
+        </div>
+        <div th:if="${ad.details.description == null}" class="mx-auto w-100 rounded-bottom bg-light mb-3 px-4 py-3">
+            Terapeuta nie podał opisu terapii.
+        </div>
+        <div th:if="${ad.details.description != null}"
+             th:text="${ad.details.description}"
+             class="mx-auto w-100 rounded-bottom bg-light mb-3 px-4 py-3">
+            Opis psychoterapii
+        </div>
     </div>
 </div>
 <script th:src="@{/js/jquery-3.5.1.slim.min.js}" crossorigin="anonymous"></script>
