--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,18 +9,24 @@
 <body>
 <nav class="navbar navbar-dark bg-success">
     <a class="navbar-brand">Terapia</a>
-    <a th:href="@{/create}" class="btn btn-warning btn-outline-light bg-warning text-light ml-auto">Dodaj ogłoszenie</a>
-    <a th:unless="${therapist == null}" th:href="@{/logout}" class="btn btn-success btn-outline-light bg-success text-light ml-3">Wyloguj</a>
-    <a th:if="${therapist == null}" th:href="@{/login}" class="btn btn-success btn-outline-light bg-success text-light ml-3">Zaloguj</a>
+    <a th:href="@{/create}" class="btn btn-success btn-outline-light ml-auto">Dodaj ogłoszenie</a>
+    <a th:unless="${therapist == null}" th:href="@{/logout}" class="btn btn-success btn-outline-dark ml-3">Wyloguj</a>
+    <a th:if="${therapist == null}" th:href="@{/login}" class="btn btn-success btn-outline-dark ml-3">Zaloguj</a>
 </nav>
 <div class="mt-3 ml-3">
-    <div class="card w-50" th:each="ad, iter: ${ads}">
+    <div class="card w-50 mb-2" th:each="ad, iter: ${ads}">
+        <div class="card-header px-2 py-1" th:if="${moderator != null || (therapist != null && therapist.ad == ad.id)}">
+            <form class="row px-4" th:action="@{/remove/{id}(id=${ad.id})}" method="post">
+                <div class="my-auto" th:if="${(therapist != null && therapist.ad == ad.id)}">Twoje ogłoszenie</div>
+                <button type="submit" class="btn btn-secondary ml-auto">Usuń</button>
+            </form>
+        </div>
         <div class="card-body">
-        <h5 class="card-title">
-            <span th:text="${ad.details.name}">Name</span>
-            <span th:text="${ad.details.surname}">Surname</span>
-        </h5>
-            <a class="card-link" th:href="@{/ads/{ad_id}(ad_id=${iter.index})}">Zobacz szczegóły</a>
+            <h5 class="card-title" th:text="${ad.details.name + ' ' + ad.details.surname}">Name and surname</h5>
+            <h6 class="card-subtitle mb-2 text-muted">
+                <span th:text="${ad.details.address}">Address</span>
+            </h6>
+            <a class="card-link text-success mb-3" th:href="@{/ads/{ad_id}(ad_id=${iter.index})}">Zobacz szczegóły</a>
             <p></p>
         </div>
     </div>
