Creation of new ad immediately after deleting old one is possible

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -138,8 +138,8 @@
                 </div>
             </div>
             <div class="row mx-auto">
-                <a th:href="@{/}" type="button" class="btn btn-secondary ml-3">Anuluj</a>
-                <button type="submit" class="btn btn-success ml-auto mr-3">Dodaj ogłoszenie</button>
+                <a th:href="@{/}" type="button" class="btn btn-secondary">Anuluj</a>
+                <button type="submit" class="btn btn-success ml-auto">Dodaj ogłoszenie</button>
             </div>
         </div>
     </form>
