--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -11,7 +11,7 @@
     <a class="navbar-brand">Terapia</a>
     <a th:href="@{/logout}" class="btn btn-success btn-outline-light text-light bg-success">Wyloguj</a>
 </nav>
-<div class="card w-50 mt-3 mx-auto">
+<div class="card w-50 mt-3 mb-5 mx-auto">
     <form class="card-body" th:action="@{/create}" th:object="${details}" method="post">
         <div class="col">
             <h5 class="card-title mb-4">Dodaj ogłoszenie</h5>
