--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -10,8 +10,8 @@
 <nav class="navbar navbar-dark bg-success">
     <a class="navbar-brand">Terapia</a>
     <a th:href="@{/create}" class="btn btn-success btn-outline-light ml-auto">Dodaj ogłoszenie</a>
-    <a th:unless="${therapist == null}" th:href="@{/logout}" class="btn btn-success btn-outline-dark ml-3">Wyloguj</a>
-    <a th:if="${therapist == null}" th:href="@{/login}" class="btn btn-success btn-outline-dark ml-3">Zaloguj</a>
+    <a th:unless="${therapist == null && moderator == null}" th:href="@{/logout}" class="btn btn-success btn-outline-dark ml-3">Wyloguj</a>
+    <a th:if="${therapist == null && moderator == null}" th:href="@{/login}" class="btn btn-success btn-outline-dark ml-3">Zaloguj</a>
 </nav>
 <div class="card w-50 mt-3 mb-4 mx-auto">
     <div class="card-header">
@@ -67,10 +67,21 @@
     <div class="card-header px-2 py-1">
         <div class="row px-4">
             <h4 class="my-auto">Komentarze</h4>
-            <button type="submit" class="btn btn-secondary ml-auto" data-toggle="collapse" data-target="#newComment">Dodaj opinię</button>
+            <button id="newCommentButton" type="submit" class="btn btn-secondary ml-auto"
+                    data-toggle="collapse" data-target="#newComment">Dodaj opinię</button>
         </div>
     </div>
-    <div class="card-body"></div>
+    <div class="card-body">
+        <div class="card" th:each="comment: ${ad.comments}">
+            <div class="card-body">
+                <form class="d-flex">
+                    <h6 class="card-title" th:text="${comment.author}">Autor komentarza</h6>
+                    <button th:if="${moderator != null}" type="submit" class="btn btn-secondary ml-auto">Usuń</button>
+                </form>
+                <div class="card-text" th:text="${comment.content}">Treść komentarza</div>
+            </div>
+        </div>
+    </div>
     <div id="newComment" class="card card-footer collapse">
         <div class="card-body">
             <h6 class="card-title">Nowy komentarz</h6>
@@ -88,7 +99,12 @@
         </div>
     </div>
 </div>
-<script th:src="@{/js/jquery-3.5.1.slim.min.js}" crossorigin="anonymous"></script>
+<script th:src="@{/js/jquery-3.5.1.min.js}" crossorigin="anonymous"></script>
+<script>
+    $('#newComment').on('shown.bs.collapse', function () {
+        $("html, body").animate({ scrollTop: $("#newComment").offset().top }, 1000);
+    });
+</script>
 <script th:src="@{/js/bootstrap.bundle.min.js}" crossorigin="anonymous"></script>
 </body>
 </html>
