Send fetch request on comment form submit

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -88,7 +88,7 @@
     <div id="newComment" class="card card-footer collapse">
         <div class="card-body">
             <h6 class="card-title">Nowy komentarz</h6>
-            <form th:action="@{/comment}" th:object="${new_comment}" method="post">
+            <form id="newCommentForm" th:object="${new_comment}">
                 <div class="form-group">
                     <label for="author" class="px-2 pt-2">Pseudonim</label>
                     <input type="text" class="form-control" th:field="*{author}" id="author" placeholder="Twoje imię">
@@ -104,9 +104,30 @@
 </div>
 <script th:src="@{/js/jquery-3.5.1.min.js}" crossorigin="anonymous"></script>
 <script>
+    function getCookie(n) {
+        //https://stackoverflow.com/questions/5639346/what-is-the-shortest-function-for-reading-a-cookie-by-name-in-javascript
+        let c = document.cookie.match('(^|;)\\s*' + n + '\\s*=\\s*([^;]+)');
+        return c ? c.pop() : '';
+    }
     $('#newComment').on('shown.bs.collapse', function () {
         $("html, body").animate({ scrollTop: $("#newComment").offset().top }, 1000);
     });
+    $('#newCommentForm').on('submit', function(event) {
+        event.preventDefault();
+        let headers = new Headers();
+        headers.set('Accept', 'application/json');
+        headers.set('Content-Type', 'application/json');
+        let token = getCookie("XSRF-TOKEN");
+        headers.set("X-XSRF-TOKEN", token);
+        fetch("/comment", {
+            method: "POST",
+            headers
+        }).then(response => response.json())
+        .then(function(data) {
+            console.log(data);
+            alert(data.response);
+        });
+    })
 </script>
 <script th:src="@{/js/bootstrap.bundle.min.js}" crossorigin="anonymous"></script>
 </body>
