--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </div>
-<div id="cookies" class="card fixed-bottom bg-secondary ml-auto shadow-lg collapse show" style="width: 37rem;">
+<div id="cookies" class="card fixed-bottom bg-gray-light ml-auto shadow collapse show" style="width: 37rem;">
     <div class="card-body">
         <div class="d-flex flex-column">
             <div>
