--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>React</title>
+    <title>Terapia</title>
 </head>
 <body>
 <div id="react"></div>
