--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -145,6 +145,21 @@
         </div>
     </form>
 </div>
+<div id="cookies" class="card fixed-bottom bg-gray-light ml-auto shadow collapse" th:classappend="${therapist == null || !therapist.getCookiesAccepted() ? 'show' : ''}" style="width: 37rem;">
+    <div class="card-body">
+        <div class="d-flex flex-column">
+            <div>
+                <h5 class="card-title">Ciasteczka</h5>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="d-flex align-items-center">
+                    <div th:text="${cookies_text}">Cookies text</div>
+                </div>
+                <button id="acceptCookies" class="btn btn-success ml-4" data-toggle="collapse" data-target="#cookies">Rozumiem</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script th:src="@{/js/jquery-3.5.1.slim.min.js}" crossorigin="anonymous"></script>
 <script>
     $("#addNextPrice" ).click(function() {
